k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-backend-ingress
  namespace: live-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api3.live-hanium.app
      secretName: live-backend-tls-secret
  rules:
    - host: api3.live-hanium.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: live-backend-service
                port:
                  number: 80
